--- a/code/job.yml
+++ b/code/job.yml
@@ -1,15 +1,13 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
-code: model
+code: train
 command: >-
   python train.py
-  --training_data ${{inputs.training_data}}
-  --reg_rate ${{inputs.reg_rate}}
+  --kernel ${{inputs.kernel}}
+  --penalty ${{inputs.penalty}}
 inputs:
-  training_data: 
-    type: uri_folder 
-    path: azureml:diabetes-folder:1 
-  reg_rate: 0.01
+  kernel: "linear"
+  penalty: 1.0
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: cluster
+compute: githubcluster
 experiment_name: pipeline
 description: This pipeline job is created from cli
