--- a/.github/workflows/00_create_pipeline.yml
+++ b/.github/workflows/00_create_pipeline.yml
@@ -33,5 +33,5 @@ jobs:
       run: |
         cd code
         az ml job create --file job2.yml --resource-group "${{github.event.inputs.resource_group}}" --workspace-name "${{github.event.inputs.aml_workspace}}"
-        az ml schedule create --file recurrence-job-schedule.yml --no-wait
+        #az ml schedule create --file recurrence-job-schedule.yml --no-wait
 
