--- a/code/job2.yml
+++ b/code/job2.yml
@@ -4,10 +4,19 @@ display_name: hello_pipeline_abc
 compute: azureml:githubcluster
   
 inputs:
-  hello_string_top_level_input: "hello world2222 !!~"
+  kernel_top_level_input: "linear"
+  penalty_top_level_input: 1.0
 jobs:
-  a:
-    command: echo hello ${{inputs.hello_string}}
-    environment: azureml://registries/azureml/environments/sklearn-1.0/labels/latest
+  RunTrain:
+    code: train
+    command: >-
+      python train.py
+      --kernel ${{inputs.kernel}}
+      --penalty ${{inputs.penalty}}
     inputs:
-      hello_string: ${{parent.inputs.hello_string_top_level_input}}
+      kernel: ${{parent.inputs.kernel_top_level_input}}
+      penalty: ${{parent.inputs.penalty_top_level_input}}
+    environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
+    description: This pipeline job is created from cli  
+
+
