--- a/code/recurrence-job-schedule.yml
+++ b/code/recurrence-job-schedule.yml
@@ -13,5 +13,13 @@ trigger:
   start_time: "2022-07-10T10:00:00" # optional - default will be schedule creation time
   time_zone: "Pacific Standard Time" # optional - default will be UTC
 
-create_job: ./job2.yml
+create_job: 
+  type: pipeline
+  job: ./job2.yml
+  # job: azureml:simple-pipeline-job
+  # runtime settings
+
+  inputs:
+    kernel_top_level_input: "linear" 
+
 # create_job: azureml:simple-pipeline-job
