--- a/code/job2.yml
+++ b/code/job2.yml
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/latest/pipelineJob.schema.json
 type: pipeline
-display_name: hello_pipeline_abc
+display_name: hello_pipeline_abc2
 compute: azureml:githubcluster
   
 inputs:
